# test_assigment

./: pyproject.toml
src/adapters/database/: config.py
src/adapters/database/models/: user.py
src/adapters/database/repositories/: user.py
src/adapters/services/: jwt.py
src/application/: user_application.py
src/domain/entities/: jwt.py  user.py
src/domain/interfaces/: repository.py  service.py  uow.py
src/domain/value_objects/: base.py  user.py
src/drivers/rest/routers/: user.py
src/main/: config.py
